<resources>
    <string name="app_name">kmbaker-reflex</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="single_user">Single User</string>
    <string name="reaction">Test Your Reactions</string>
    <string name="gameshow">Gameshow Buzzer</string>
    <string name="stats">Statistics</string>
    <string name="title_activity_test_reflex">Test Your Reflexes</string>
    <string name="push">Push me!</string>
    <string name="title_activity_use_buzzer">Gameshow Buzzer</string>
     <string-array
            name="players">
        <item
            >2</item>
         <item
             >3</item>
         <item
             >4</item>
     </string-array>
    <string name="title_activity_two_player">Gameshow Buzzer</string>
    <string name="title_activity_three_player">Gameshow Buzzer</string>
    <string name="title_activity_four_player">Gameshow Buzzer</string>
    <string name="title_activity_show_stats">Your Statistics</string>

    <string name="all">All: </string>
    <string name="last10">Last 10: </string>
    <string name="last100">Last 100: </string>
    <string name="player1">Player 1: </string>
    <string name="player2">Player 2: </string>
    <string name="player3">Player 3: </string>
    <string name="player4">Player 4: </string>
</resources>
