<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ualberta.kmbaker.kmbaker_reflex.showStatsActivity">

    <TextView android:text="Reaction Times" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Minimum"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last10"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last100"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignStart="@+id/clear" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Maximum"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last10"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last100"
        android:id="@+id/textView11"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignEnd="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Average"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last10"
        android:id="@+id/textView14"
        android:layout_below="@+id/textView12"
        android:layout_alignStart="@+id/textView10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last100"
        android:id="@+id/textView15"
        android:layout_alignTop="@+id/textView14"
        android:layout_alignStart="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Median"
        android:id="@+id/textView16"
        android:layout_below="@+id/textView13"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:id="@+id/textView17"
        android:layout_below="@+id/textView16"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last10"
        android:id="@+id/textView18"
        android:layout_below="@+id/textView16"
        android:layout_alignStart="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last100"
        android:id="@+id/textView19"
        android:layout_alignTop="@+id/textView18"
        android:layout_alignStart="@+id/textView15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Buzzer Counts"
        android:id="@+id/textView20"
        android:layout_below="@+id/textView17"
        android:layout_alignParentStart="true"
        android:layout_marginTop="65dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2 Player"
        android:id="@+id/textView21"
        android:layout_below="@+id/textView20"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1"
        android:id="@+id/textView22"
        android:layout_below="@+id/textView21"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:id="@+id/textView23"
        android:layout_alignTop="@+id/textView22"
        android:layout_toEndOf="@+id/button4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3 Player"
        android:id="@+id/textView24"
        android:layout_below="@+id/textView22"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1"
        android:id="@+id/textView25"
        android:layout_below="@+id/textView24"
        android:layout_alignStart="@+id/textView22" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:id="@+id/textView26"
        android:layout_alignTop="@+id/textView27"
        android:layout_alignStart="@+id/textView23" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player3"
        android:id="@+id/textView27"
        android:layout_alignTop="@+id/textView25"
        android:layout_alignEnd="@+id/textView19" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4 Player"
        android:id="@+id/textView28"
        android:layout_below="@+id/textView25"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1"
        android:id="@+id/textView29"
        android:layout_below="@+id/textView28"
        android:layout_alignStart="@+id/textView25" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:id="@+id/textView30"
        android:layout_alignTop="@+id/textView29"
        android:layout_alignStart="@+id/textView26" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player3"
        android:id="@+id/textView31"
        android:layout_below="@+id/textView33"
        android:layout_alignStart="@+id/textView29" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player4"
        android:id="@+id/textView32"
        android:layout_below="@+id/textView33"
        android:layout_alignStart="@+id/textView30" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView33"
        android:layout_below="@+id/textView29"
        android:layout_alignEnd="@+id/textView3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="clear"
        android:id="@+id/clear"
        android:onClick="clearStats"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email your stats"
        android:id="@+id/button4"
        android:onClick="sendEmail"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView31" />


</RelativeLayout>
